Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95641

ImageCapture not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.0 Beta3, 6.3.0 Alpha
    • 6.2.0 Beta2
    • Multimedia
    • None
    • MacOS Big Sur 11.3
    • macOS
    • b219b8b0e8ce5db52aac9c0d0555a297e6c173f7 (qt/qtmultimedia/dev) 1924eb9527f1f65f3c46bb56422c2c576233ee48 (qt/qtmultimedia/6.2)

      See attached minimal example. When clicking on the capture button, the following output is seen:

      qml: capture error: Camera is not ready.

      readyForCapture property is never set to true, despite the video preview showing up fine.

        For Gerrit Dashboard: QTBUG-95641
        # Subject Branch Project Status CR V

            dorisverria Doris Verria
            ttgil Gil
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes