src/multimedia/platform/darwin/camera/avfcamerarenderer.mm
@@ -185,6 +185,7 @@ void AVFCameraRenderer::updateCaptureConnection()
 void AVFCameraRenderer::syncHandleViewfinderFrame(const QVideoFrame &frame)
 {
     Q_EMIT newViewfinderFrame(frame);
+
     QMutexLocker lock(&m_vfMutex);
     if (m_rendersToWindow)
         return;
